<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Popular Movies</string>

    <!--DETAIL ACTIVITY STRINGS-->
    <string name="rating_max">/10</string>
    <string name="link_header">Links:</string>
    <string name="vote_count"><xliff:g name="vote_count">%s</xliff:g> votes</string>
    <string name="imdb_link"><u><xliff:g name="movie_name">%s</xliff:g> on IMDB</u></string>
    <string name="tmdb_link"><u><xliff:g name="movie_name">%s</xliff:g> on TMDB</u></string>
    <string name="homepage_link"><u>Official Website</u></string>
    <string name="add_to_faves"><xliff:g name="movie_name">%s</xliff:g> added to favourites.</string>
    <string name="remove_from_faves"><xliff:g name="movie_name">%s</xliff:g> removed from favourites.</string>

    <!--Subheader Strings-->
    <string name="languages_sub">Languages</string>
    <string name="budget_sub">Budget</string>
    <string name="revenue_sub">Worldwide Revenue</string>
    <string name="release_date_sub">Release Date</string>

    <!--Review and Trailers Layout Strings-->
    <string name="empty_reviews_string">No reviews yet.</string>
    <string name="empty_trailers_string">No trailers found yet.</string>

    <!--Placeholder Strings - For design use only-->
    <string name="title_placeholder">Fight Club (1999)</string>
    <string name="overview_placeholder">A ticking-time-bomb insomniac and a slippery soap salesman
        channel primal male aggression into a shocking new form of therapy. Their concept catches
        on, with underground \"fight clubs\" forming in every town, until an eccentric gets in the
        way and ignites an out-of-control spiral toward oblivion.</string>
    <string name="tagline_placeholder">A ticking-time-bomb insomniac and a slippery soap salesman
        channel primal male aggression into a shocking new form of therapy.</string>
    <string name="runtime_placeholder">2h 19m</string>
    <string name="languages_placeholder">English</string>
    <string name="genres_placeholder">Drama | Thriller | Comedy</string>
    <string name="budget_placeholder">$1.5m</string>
    <string name="revenue_placeholder">$10.1m</string>
    <string name="user_rating_placeholder">8.3</string>
    <string name="vote_count_placeholder">1,555 votes</string>
    <string name="release_date_placeholder">1999&#8211;10&#8211;15</string>
    <string name="username_placeholder">username090</string>
    <string name="review_placeholder">What a great film. Just a placeholder though but just to see
        what it is like when I look at it in preview mode, you know. I rate this film 4 stars, but I
        rate myself 5 stars.</string>
    <string name="trailer_type_placeholder">Trailer</string>
    <string name="trailer_name_placeholder">Official Trailer | Fight Club</string>

    <!--SETTINGS MENU STRINGS-->
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Most Popular</string>
    <string name="favourites">Favourites</string>

    <!--TAB LAYOUT TITLE STRINGS-->
    <string name="overview_title">Overview</string>
    <string name="detail_title">Details</string>
    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>

    <string-array name="tablayout_titles_array">
        <item>@string/overview_title</item>
        <item>@string/detail_title</item>
        <item>@string/trailers_title</item>
        <item>@string/reviews_title</item>
    </string-array>


    <!--CONTENT DESCRIPTION STRING-->
    <string name="poster_description">Poster for movie</string>
    <string name="backdrop_description">Backdrop image from movie</string>
    <string name="tmdb_logo_description">TMDB Logo - App Powered by The Movie Database</string>
    <string name="setting_sort_description">Sort/Filter List Options:</string>
    <string name="fave_star_description">Star Button - Add/Remove From Favourites</string>
    <string name="trailer_image_description">Trailer Image</string>
    <string name="play_trailer_button_description">Play Trailer Button</string>


    <!--STRINGS FOR DEALING WITH EXCEPTIONS -->
    <string name="url_exception">Problem with the request URL</string>
    <string name="response_code_exception" tools:ignore="PluralsCandidate">
        Error: <xliff:g name="response_code">%d</xliff:g> response code received
    </string>
    <string name="json_exception">Problem retrieving JSON correctly</string>
    <string name="parse_exception">Invalid date or problem with date formatting</string>
    <string name="http_request_exception">HTTP request error</string>
    <string name="no_network_connection">
        Error. No network connection or unable to connect to network.
    </string>
    <string name="no_favourites">You have no favourites selected.</string>
    <string name="no_results">No results for chosen preference. Please try another one.</string>
    <string name="null_pointer_exception">Error. No response code found.</string>
    <string name="keyboard_hide_exception">Error hiding keyboard</string>
    <string name="malformed_url_exception">Problem with the thumbnail URL</string>
    <string name="io_exception">Unknown IO exception</string>

    <!--Content Uri Exceptions-->
    <string name="content_uri_tmdb_id_exception">Movie requires a valid id</string>
    <string name="content_uri_poster_url_exception">Movie requires a valid poster url.</string>
    <string name="content_uri_unsupported_deletion_exception">Deletion is not supported for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_unsupported_update_exception">Update is not supported for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_unsupported_insertion_exception">Insertion is not supported for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_insert_failure_exception">Failed to insert row for <xliff:g name="URI">%s</xliff:g></string>
    <string name="content_uri_unknown_exception">Unknown URI <xliff:g name="URI">%s</xliff:g> for <xliff:g name="UriMatcher">%d</xliff:g></string>

</resources>
