<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin">

        <TextView
            android:id="@+id/release_date_sub"
            style="@style/SubHeadersStyle"
            android:text="@string/release_date_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_overview"
            app:layout_constraintEnd_toStartOf="@id/movie_release_date"/>

        <TextView
            android:id="@+id/movie_release_date"
            style="@style/MovieDetailsStyle"
            app:layout_constraintTop_toTopOf="@id/release_date_sub"
            app:layout_constraintStart_toEndOf="@id/release_date_sub"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            tools:text="@string/release_date_placeholder"/>

        <TextView
            android:id="@+id/language_sub"
            style="@style/SubHeadersStyle"
            android:text="@string/languages_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date_sub"/>

        <TextView
            android:id="@+id/movie_language"
            style="@style/MovieDetailsStyle"
            app:layout_constraintEnd_toEndOf="@id/movie_release_date"
            app:layout_constraintStart_toStartOf="@id/movie_release_date"
            app:layout_constraintTop_toBottomOf="@id/movie_release_date"
            android:gravity="start"
            tools:text="@string/languages_placeholder"/>

        <TextView
            android:id="@+id/budget_sub"
            style="@style/SubHeadersStyle"
            android:text="@string/budget_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_sub"/>

        <TextView
            android:id="@+id/movie_budget"
            style="@style/MovieDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/budget_sub"
            app:layout_constraintTop_toBottomOf="@id/movie_language"
            app:layout_constraintStart_toStartOf="@id/movie_release_date"
            android:gravity="start"
            tools:text="@string/budget_placeholder"/>

        <TextView
            android:id="@+id/revenue_sub"
            style="@style/SubHeadersStyle"
            android:text="@string/revenue_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/budget_sub"/>

        <TextView
            android:id="@+id/movie_revenue"
            style="@style/MovieDetailsStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/revenue_sub"
            app:layout_constraintTop_toBottomOf="@id/movie_budget"
            app:layout_constraintStart_toStartOf="@id/movie_release_date"
            android:gravity="start"
            tools:text="@string/revenue_placeholder"/>

        <TextView
            android:id="@+id/link_header"
            style="@style/SubHeadersStyle"
            android:text="@string/link_header"
            app:layout_constraintTop_toBottomOf="@id/movie_revenue"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/homepage_link"
            style="@style/LinkStyle"
            android:text="@string/homepage_link"
            android:drawableEnd="@drawable/external_link"
            app:layout_constraintTop_toBottomOf="@id/link_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/imdb_link"
            style="@style/LinkStyle"
            android:drawableEnd="@drawable/external_link"
            app:layout_constraintTop_toBottomOf="@id/homepage_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tmdb_link"
            style="@style/LinkStyle"
            android:drawableEnd="@drawable/external_link"
            app:layout_constraintTop_toBottomOf="@id/imdb_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/padded_view"
            style="@style/MovieDetailsStyle"
            android:paddingBottom="@dimen/padded_view_height"
            android:paddingTop="@dimen/padded_view_height"
            android:layout_marginTop="@dimen/padded_view_height"
            android:layout_marginBottom="@dimen/padded_view_height"
            app:layout_constraintTop_toBottomOf="@id/tmdb_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>