<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context="com.coderman202.popularmovies.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movie_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tmdb_logo"/>

    <TextView
        android:id="@+id/no_connection"
        style="@style/TextBodyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tmdb_logo"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_network_connection"
        android:drawableTop="@drawable/no_connection"/>

    <TextView
        android:id="@+id/no_favourites"
        style="@style/TextBodyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tmdb_logo"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_favourites"
        android:drawableTop="@drawable/no_favourites_folder"/>

    <TextView
        android:id="@+id/no_results"
        style="@style/TextBodyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tmdb_logo"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_results"
        android:drawableTop="@drawable/empty_list"/>

    <ImageView
        android:id="@+id/tmdb_logo"
        style="@style/MovieDetailsStyle"
        android:src="@drawable/tmdb_logo"
        android:layout_height="@dimen/tmdb_logo_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/tmdb_logo_description"/>

</android.support.constraint.ConstraintLayout>
